refresh sqlability post

--- a/posts/2021-06-28.md
+++ b/posts/2021-06-28.md
@@ -13,17 +13,18 @@ Both databases and stream processors mediate access to continually changing data
 
 That's about as far as I got.
 
+Here's one take on their essential difference (I have several, but this is one):
 The database provides value by imposing structure on and maintaining **data**.
 The stream processor provides value by imposing structure on and maintaining **computations**.
-They each tend to be less good at the other task, or if you want to do their speciality your way instead.
+They each tend to be less good at the other task.
 
 But, if you are anything like the folks who have been reaching out to us at Materialize, you probably want both anyhow.
 
-Let's look at three classic examples for why folks reach for streaming processors instead of databases:
+Let's look at three classic examples for reasons folks reach for streaming processors instead of databases:
 
-1. People reach for stream processors because they have an unbounded source of data, and it just won't fit in a database.
+1. People reach for stream processors when they have an unbounded source of data, and it just won't fit in a database.
 2. People reach for stream processors when they want control over which data their queries reflect any time.
-3. People reach for stream processors because they want to build event-driven architectures.
+3. People reach for stream processors when they want to build event-driven architectures.
 
 In these cases, the data itself is not as important as *reactions to* the data.
 Obviously, there are other cases where the data are the more important thing.
@@ -34,12 +35,43 @@ I'm going to argue that SQL is a fine language for describing a large class of s
 More specifically: *maintaining SQL queries over changing data* addresses a large class of streaming needs.
 It's not going to solve all of your streaming problems, in the same way that I have graph computations that SQL can't handle.
 
+But let's hit the three examples from above, each done up with just SQL.
+
+We'll start with two example tables, `sensors` a dimension table containing information about some sensors we have, and `readings` a fact table containing all sensor measurements.
+
+```sql
+-- Information about each sensor
+CREATE TABLE sensors (
+    sensor_pk bigint,   -- id of the sensor (primary key)
+    region text,        -- grouping of sensors
+    model text          -- name of sensor
+);
+
+-- Measurements from the field
+CREATE TABLE readings (
+    sensor_fk bigint,   -- id of the sensor (foreign key)
+    time_ms numeric,    -- time of the measurement
+    temp real           -- the measurement itself
+);
+```
+We are mainly going to be interested in pulling out the maximum `temp` grouped by `region`.
+Both `temp` and `region` are in different relations, so we'll need to join them before aggregating.
+```sql
+SELECT sensor, time.hour, MAX(temperature)
+FROM readings
+GROUP BY sensor, time.hour
+```
+
+We will dress this up a bit as we go, but it's a pretty elementary query that nonetheless shows off some interesting problems and fixes, all without departing from SQL.
+
+---
+
 ### Aggregations over unbounded data
 
-People reach for stream processors because they have an unbounded source of data, and it just won't fit in a database.
+People reach for stream processors when they have an unbounded source of data, and it just won't fit in a database.
 Or perhaps it will fit, but it is so clearly inefficient or uneconomical to do so.
 
-Let's say you have a continually growing collection of `(sensor, temperature, time)` measurements.
+Let's say `readings` grows unboundedly with time, as many fact tables do.
 You want to track the maximum temperature of each `sensor` by hour.
 This is a pretty easy piece of SQL to knock out:
 ```sql
@@ -51,45 +83,63 @@ GROUP BY sensor, time.hour
 
 Of course, you might be scared to run this because you can't fit `readings` into your database.
 Or perhaps it just feels wrong to store per-second readings just to maintain hourly aggregates.
-Let's not even get to re-reading all of this data each time you want to see these aggregates.
+Let's not even get to the problem of re-reading all of this data each time you want to see these aggregates.
 In any case, you aren't interested in maintaining all of this *data*, just *a view over the data*.
 
 A stream processor isn't obliged to maintain your data for you.
 It only needs to maintain the *query results*, rather than the input data.
 The input data can be streamed in from cheaper storage, and once you are sure they are reflected, potentially discarded.
+The concept is the same as "foreign tables" in databases: an external source of data whose contetns are managed elsewhere.
 
-In Materialize, you can create append-only sources, which will have more efficient implementations for queries like the one above.
+In Materialize, you can create *append-only* sources, which will have more efficient implementations for queries like the one above.
 We'll maintain the current results as they change, and not the whole input data.
+
+Crucially, you don't have to write any weird SQL to get that to happen.
+
+![Unbounded data example](https://github.com/frankmcsherry/blog/blob/master/assets/sqlability/unbounded_data.svg)
+
+
+---
 
 ### Windowing queries by time
 
 People reach for stream processors when they want control over which data their queries reflect any time.
-Specifically, folks often want the ability to focus on recent data and age-out old data.
+Concretely, folks often want the ability to focus on recent data and age-out old data.
 
 A classic example is the query we saw above, which grouped measurements by hour.
-Why not maintain the maximum over just the past hour's data?
+Why not instead maintain the maximum over just the past hour's data?
 Something like:
 
 ```sql
 -- Maximum temperature for each sensor, over the past hour's data.
 SELECT sensor, MAX(temperature)
 FROM readings
-WHERE now() BETWEEN time AND time + '1 HOUR'
+WHERE CURRENT_TIME() BETWEEN time_ms AND time_ms + '1 HOUR'
 GROUP BY sensor
 ```
 
-This query uses the `now()` method which returns the current system time.
-If you issue this query, the system will first evaluate `now()` and then look for records that satisfy the predicate.
-The query results change both as `readings` change, but also as `now()` changes.
+This query uses the `CURRENT_TIME()` SQL method which returns the current system time, and compares it against `readings.time_ms`.
+
+If you issue this query, the system will first evaluate `CURRENT_TIME()` and then look for records that satisfy the predicate.
+If you continually re-execute the query, the results will change as `readings` change, but also as `CURRENT_TIME()` changes.
+Records will appear as soon as `CURRENT_TIME()` is greater than their inserted `time_ms`, and they will vanish an hour later when `CURRENT_TIME()` is no longer less than `time_ms + '1 HOUR'`.
 
 While you can probably guess how to *compute* the query, it is also surprisingly easy to *maintain*.
-The query itself tells us when a given reading comes in to effect (its `time`), and when it should be retracted (its `time + '1 HOUR'`).
+The query itself tells us when a given reading comes in to effect (its `time_ms`), and when it should be retracted (its `time_ms + '1 HOUR'`)
 
-*caveat*: In Materialize you should use `mz_logical_time()` instead of `now()`.
+By refering to SQL-standard `CURRENT_TIME()` in your query, you describe
+
+*caveat*: In Materialize you must use `mz_logical_time()` instead of `CURRENT_TIME()`.
+The former references the event time of your data, which is often but not always the same reckoning as the time experienced by the system.
+
+![Temporal filter example](https://github.com/frankmcsherry/blog/blob/master/assets/sqlability/temporal_filter.svg)
+
+
+---
 
 ### Prompting queries by events
 
-People reach for stream processors because they want to build event-driven architectures.
+People reach for stream processors when they want to build event-driven architectures.
 Rather than continually poll databases, they would like to be notified when new information is available, or when old information changes.
 
 Most databases have a concept of a "prepared statement": A query with "holes" that can execute once these parameters are supplied.
@@ -131,4 +181,9 @@ The LATERAL JOIN pattern allows you to set up parameterized queries, and enable 
 The best example I've heard of this comes from one of our users.
 They have a workflow where their analysts show up with a problematic ID, and want to crack open a standard set of dashboards on data related to this ID.
 They could set up those queries by hand, or perhaps with some scripts, but a few `LATERAL JOIN` queries allow someone else to define and automate the view set-up; the analyst just needs to add the ID to the `queries` collection to start things up, and drop the ID once they are done.
+
+![Lateral join example](https://github.com/frankmcsherry/blog/blob/master/assets/sqlability/lateral_join.svg)
+
+
+##
 
